# MakeMeter

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
Source/: GLVisualiser.cpp  GLVisualiser.h  Meters.h  MixAdvisor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginScanner.h
Tests/: CalibEbu.cpp  MeterTest.cpp  SpecShot.cpp
